[gd_scene load_steps=9 format=2]

[ext_resource path="res://Open_Sans/OpenSans-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Open_Sans/OpenSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://tooltip_theme.tres" type="Theme" id=3]
[ext_resource path="res://CarDescription.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.341176, 0.392157, 0.490196, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.341176, 0.392157, 0.490196, 1 )
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[node name="CarDescription" type="Node2D"]
z_index = 4
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_left = -325.0
margin_top = -100.0
margin_right = 325.0
margin_bottom = 100.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarName" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Chevrolet Vega 2300"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weight" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 65.0
margin_right = 135.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "Gewicht:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeightVal" type="Label" parent="Panel"]
margin_left = 104.0
margin_top = 65.0
margin_right = 194.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "1500 kg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Consumption" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 95.0
margin_right = 135.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
text = "Verbrauch:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConsumptionVal" type="Label" parent="Panel"]
margin_left = 104.0
margin_top = 95.0
margin_right = 194.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
text = "8.4 l"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorsePower" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 125.0
margin_right = 135.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "PS:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorsePowerVal" type="Label" parent="Panel"]
margin_left = 104.0
margin_top = 125.0
margin_right = 194.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "90"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YearOfConstruction" type="Label" parent="Panel"]
margin_left = 10.0
margin_top = 155.0
margin_right = 135.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
text = "Baujahr:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YearOfConstructionVal" type="Label" parent="Panel"]
margin_left = 104.0
margin_top = 155.0
margin_right = 194.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
text = "1971"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cylinder" type="Label" parent="Panel"]
margin_left = 311.0
margin_top = 65.0
margin_right = 436.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "Zylinder:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CylinderVal" type="Label" parent="Panel"]
margin_left = 440.0
margin_top = 65.0
margin_right = 530.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CubicCapacity" type="Label" parent="Panel"]
margin_left = 311.0
margin_top = 95.0
margin_right = 436.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
text = "Hubraum:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CubicCapacityVal" type="Label" parent="Panel"]
margin_left = 440.0
margin_top = 95.0
margin_right = 530.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
text = "2294.2 cmÂ³"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Acceleration" type="Label" parent="Panel"]
margin_left = 311.0
margin_top = 125.0
margin_right = 436.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "Beschleunigung:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccelerationVal" type="Label" parent="Panel"]
margin_left = 440.0
margin_top = 125.0
margin_right = 530.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "15.5 s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Origin" type="Label" parent="Panel"]
margin_left = 440.0
margin_top = 155.0
margin_right = 530.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
text = "American"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OriginVal" type="Label" parent="Panel"]
margin_left = 311.0
margin_top = 155.0
margin_right = 436.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 2 )
text = "Herkunft:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopTip" type="Panel" parent="."]
margin_left = -15.0
margin_top = -115.0
margin_right = 15.0
margin_bottom = -85.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 15, 15 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomTip" type="Panel" parent="."]
margin_left = -15.0
margin_top = 85.0
margin_right = 15.0
margin_bottom = 115.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 15, 15 )
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
